scripts/gen/STParser.py
# Generated from ST.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class STParser ( Parser ):

    grammarFileName = "ST.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'['", "','", "']'", "')'", "';;'", 
                     "':'", "';'", "'..'", "':='", "'...'", "'t#'", "'T#'", 
                     "'#'", "'.'", "'PROGRAMS'", "'PROGRAMSEND'", "'TYPE'", 
                     "'END_TYPE'", "'STRUCT'", "'END_STRUCT'", "'PROGRAM'", 
                     "'END_PROGRAM'", "'FUNCTION_BLOCK'", "'END_FUNCTION_BLOCK'", 
                     "'FUNCTION'", "'END_FUNCTION'", "'SUBPROGRAM'", "'END_SUBPROGRAM'", 
                     "'VAR'", "'VAR_INPUT'", "'VAR_OUTPUT'", "'VAR_IN_OUT'", 
                     "'VAR_GLOBAL'", "'END_VAR'", "'@#timerSetValue'", "'@#timerValue'", 
                     "'@#cycleValue'", "'WAIT'", "'WAIT_TIME'", "'='", "'ARRAY'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'**'", "'*'", "'/'", "'MOD'", "'+'", "'-'", "<INVALID>", 
                     "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PROGRAMS", "PROGRAMSEND", "TYPESTART", "ENDTYPE", 
                      "STRUCT", "END_STRUCT", "PROGRAM", "END_PROGRAM", 
                      "FUNCTION_BLOCK", "END_FUNCTION_BLOCK", "FUNCTION", 
                      "END_FUNCTION", "SUBPROGRAM", "END_SUBPROGRAM", "VAR", 
                      "VAR_INPUT", "VAR_OUTPUT", "VAR_IN_OUT", "VAR_GLOBAL", 
                      "END_VAR", "SPECIALTIMEFUN", "SPECIALTIMEKEYWORD", 
                      "SPECIALCYCLEKEYWORD", "SPECIALTIMEFUNWAIT", "SPECIALTIMEFUNWAITTIME", 
                      "EQUAL", "ARRAY", "COMMENT", "TRUE", "FALSE", "NOT", 
                      "EXPO", "MULT", "DIV", "MOD", "ADD", "SUB", "COMPARISON", 
                      "INEQUAL", "AND", "XOR", "OR", "TYPE", "ARITHMETICBUILTINFUNCTIONS", 
                      "DATACONVERSIONBUILTINFUNCTIONS", "FOR", "TO", "BY", 
                      "DO", "ENDFOR", "WHILE", "ENDWHILE", "REPEAT", "UNTIL", 
                      "ENDREPEAT", "IF", "THEN", "ELSEIF", "ELSE", "ENDIF", 
                      "CASE", "OF", "ENDCASE", "EXIT", "RETURN", "INT", 
                      "FLOAT", "FRACTION", "ID", "WS" ]

    RULE_stapp = 0
    RULE_config = 1
    RULE_programSection = 2
    RULE_aProgram = 3
    RULE_typeSection = 4
    RULE_enum = 5
    RULE_bitfield = 6
    RULE_structure = 7
    RULE_var_priv = 8
    RULE_var_in = 9
    RULE_var_in_out = 10
    RULE_var_out = 11
    RULE_var_global = 12
    RULE_stappTypes = 13
    RULE_arrayType = 14
    RULE_varDecl = 15
    RULE_var_decl_collection = 16
    RULE_pros = 17
    RULE_subs = 18
    RULE_udfbs = 19
    RULE_funcs = 20
    RULE_program = 21
    RULE_statementList = 22
    RULE_statement = 23
    RULE_assign = 24
    RULE_functioncall = 25
    RULE_iteration = 26
    RULE_selection = 27
    RULE_caseoption = 28
    RULE_caseoptionline = 29
    RULE_opwithequal = 30
    RULE_exitstatement = 31
    RULE_returnstatement = 32
    RULE_emptystatement = 33
    RULE_expr = 34
    RULE_assignargument = 35
    RULE_argumentlist = 36
    RULE_primary = 37
    RULE_varname = 38
    RULE_number = 39
    RULE_timeval = 40
    RULE_listInitVar = 41
    RULE_idList = 42

    ruleNames =  [ "stapp", "config", "programSection", "aProgram", "typeSection", 
                   "enum", "bitfield", "structure", "var_priv", "var_in", 
                   "var_in_out", "var_out", "var_global", "stappTypes", 
                   "arrayType", "varDecl", "var_decl_collection", "pros", 
                   "subs", "udfbs", "funcs", "program", "statementList", 
                   "statement", "assign", "functioncall", "iteration", "selection", 
                   "caseoption", "caseoptionline", "opwithequal", "exitstatement", 
                   "returnstatement", "emptystatement", "expr", "assignargument", 
                   "argumentlist", "primary", "varname", "number", "timeval", 
                   "listInitVar", "idList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    PROGRAMS=16
    PROGRAMSEND=17
    TYPESTART=18
    ENDTYPE=19
    STRUCT=20
    END_STRUCT=21
    PROGRAM=22
    END_PROGRAM=23
    FUNCTION_BLOCK=24
    END_FUNCTION_BLOCK=25
    FUNCTION=26
    END_FUNCTION=27
    SUBPROGRAM=28
    END_SUBPROGRAM=29
    VAR=30
    VAR_INPUT=31
    VAR_OUTPUT=32
    VAR_IN_OUT=33
    VAR_GLOBAL=34
    END_VAR=35
    SPECIALTIMEFUN=36
    SPECIALTIMEKEYWORD=37
    SPECIALCYCLEKEYWORD=38
    SPECIALTIMEFUNWAIT=39
    SPECIALTIMEFUNWAITTIME=40
    EQUAL=41
    ARRAY=42
    COMMENT=43
    TRUE=44
    FALSE=45
    NOT=46
    EXPO=47
    MULT=48
    DIV=49
    MOD=50
    ADD=51
    SUB=52
    COMPARISON=53
    INEQUAL=54
    AND=55
    XOR=56
    OR=57
    TYPE=58
    ARITHMETICBUILTINFUNCTIONS=59
    DATACONVERSIONBUILTINFUNCTIONS=60
    FOR=61
    TO=62
    BY=63
    DO=64
    ENDFOR=65
    WHILE=66
    ENDWHILE=67
    REPEAT=68
    UNTIL=69
    ENDREPEAT=70
    IF=71
    THEN=72
    ELSEIF=73
    ELSE=74
    ENDIF=75
    CASE=76
    OF=77
    ENDCASE=78
    EXIT=79
    RETURN=80
    INT=81
    FLOAT=82
    FRACTION=83
    ID=84
    WS=85

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StappContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def config(self):
            return self.getTypedRuleContext(STParser.ConfigContext,0)


        def pros(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.ProsContext)
            else:
                return self.getTypedRuleContext(STParser.ProsContext,i)


        def subs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.SubsContext)
            else:
                return self.getTypedRuleContext(STParser.SubsContext,i)


        def udfbs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.UdfbsContext)
            else:
                return self.getTypedRuleContext(STParser.UdfbsContext,i)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.FuncsContext)
            else:
                return self.getTypedRuleContext(STParser.FuncsContext,i)


        def getRuleIndex(self):
            return STParser.RULE_stapp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStapp" ):
                listener.enterStapp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStapp" ):
                listener.exitStapp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStapp" ):
                return visitor.visitStapp(self)
            else:
                return visitor.visitChildren(self)




    def stapp(self):

        localctx = STParser.StappContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stapp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.config()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << STParser.PROGRAM) | (1 << STParser.FUNCTION_BLOCK) | (1 << STParser.FUNCTION) | (1 << STParser.SUBPROGRAM))) != 0):
                self.state = 91
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [STParser.PROGRAM]:
                    self.state = 87
                    self.pros()
                    pass
                elif token in [STParser.SUBPROGRAM]:
                    self.state = 88
                    self.subs()
                    pass
                elif token in [STParser.FUNCTION_BLOCK]:
                    self.state = 89
                    self.udfbs()
                    pass
                elif token in [STParser.FUNCTION]:
                    self.state = 90
                    self.funcs()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programSection(self):
            return self.getTypedRuleContext(STParser.ProgramSectionContext,0)


        def typeSection(self):
            return self.getTypedRuleContext(STParser.TypeSectionContext,0)


        def var_global(self):
            return self.getTypedRuleContext(STParser.Var_globalContext,0)


        def getRuleIndex(self):
            return STParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig" ):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = STParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.programSection()
            self.state = 97
            self.typeSection()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==STParser.VAR_GLOBAL:
                self.state = 98
                self.var_global()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMS(self):
            return self.getToken(STParser.PROGRAMS, 0)

        def PROGRAMSEND(self):
            return self.getToken(STParser.PROGRAMSEND, 0)

        def aProgram(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.AProgramContext)
            else:
                return self.getTypedRuleContext(STParser.AProgramContext,i)


        def getRuleIndex(self):
            return STParser.RULE_programSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramSection" ):
                listener.enterProgramSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramSection" ):
                listener.exitProgramSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramSection" ):
                return visitor.visitProgramSection(self)
            else:
                return visitor.visitChildren(self)




    def programSection(self):

        localctx = STParser.ProgramSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(STParser.PROGRAMS)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.aProgram()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==STParser.ID):
                    break

            self.state = 107
            self.match(STParser.PROGRAMSEND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.interval = None # Token
            self.phase = None # Token
            self.priority = None # Token

        def ID(self):
            return self.getToken(STParser.ID, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(STParser.INT)
            else:
                return self.getToken(STParser.INT, i)

        def getRuleIndex(self):
            return STParser.RULE_aProgram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAProgram" ):
                listener.enterAProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAProgram" ):
                listener.exitAProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAProgram" ):
                return visitor.visitAProgram(self)
            else:
                return visitor.visitChildren(self)




    def aProgram(self):

        localctx = STParser.AProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aProgram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            localctx.name = self.match(STParser.ID)
            self.state = 110
            self.match(STParser.T__0)
            self.state = 111
            self.match(STParser.T__1)
            self.state = 112
            localctx.interval = self.match(STParser.INT)
            self.state = 113
            self.match(STParser.T__2)
            self.state = 114
            localctx.phase = self.match(STParser.INT)
            self.state = 115
            self.match(STParser.T__2)
            self.state = 116
            localctx.priority = self.match(STParser.INT)
            self.state = 117
            self.match(STParser.T__3)
            self.state = 118
            self.match(STParser.T__4)
            self.state = 119
            self.match(STParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPESTART(self):
            return self.getToken(STParser.TYPESTART, 0)

        def ENDTYPE(self):
            return self.getToken(STParser.ENDTYPE, 0)

        def enum(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.EnumContext)
            else:
                return self.getTypedRuleContext(STParser.EnumContext,i)


        def bitfield(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.BitfieldContext)
            else:
                return self.getTypedRuleContext(STParser.BitfieldContext,i)


        def structure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.StructureContext)
            else:
                return self.getTypedRuleContext(STParser.StructureContext,i)


        def getRuleIndex(self):
            return STParser.RULE_typeSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSection" ):
                listener.enterTypeSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSection" ):
                listener.exitTypeSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSection" ):
                return visitor.visitTypeSection(self)
            else:
                return visitor.visitChildren(self)




    def typeSection(self):

        localctx = STParser.TypeSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(STParser.TYPESTART)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 122
                    self.enum() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 128
                    self.bitfield() 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==STParser.ID:
                self.state = 134
                self.structure()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(STParser.ENDTYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.enumVar = None # IdListContext

        def ID(self):
            return self.getToken(STParser.ID, 0)

        def idList(self):
            return self.getTypedRuleContext(STParser.IdListContext,0)


        def getRuleIndex(self):
            return STParser.RULE_enum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum" ):
                listener.enterEnum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum" ):
                listener.exitEnum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum" ):
                return visitor.visitEnum(self)
            else:
                return visitor.visitChildren(self)




    def enum(self):

        localctx = STParser.EnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            localctx.name = self.match(STParser.ID)
            self.state = 143
            self.match(STParser.T__6)
            self.state = 144
            localctx.enumVar = self.idList()
            self.state = 145
            self.match(STParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BitfieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.varType = None # Token
            self.fieldVar = None # IdListContext

        def ID(self):
            return self.getToken(STParser.ID, 0)

        def TYPE(self):
            return self.getToken(STParser.TYPE, 0)

        def idList(self):
            return self.getTypedRuleContext(STParser.IdListContext,0)


        def getRuleIndex(self):
            return STParser.RULE_bitfield

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBitfield" ):
                listener.enterBitfield(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBitfield" ):
                listener.exitBitfield(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitfield" ):
                return visitor.visitBitfield(self)
            else:
                return visitor.visitChildren(self)




    def bitfield(self):

        localctx = STParser.BitfieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bitfield)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            localctx.name = self.match(STParser.ID)
            self.state = 148
            self.match(STParser.T__6)
            self.state = 149
            localctx.varType = self.match(STParser.TYPE)
            self.state = 150
            self.match(STParser.T__6)
            self.state = 151
            localctx.fieldVar = self.idList()
            self.state = 152
            self.match(STParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def STRUCT(self):
            return self.getToken(STParser.STRUCT, 0)

        def END_STRUCT(self):
            return self.getToken(STParser.END_STRUCT, 0)

        def ID(self):
            return self.getToken(STParser.ID, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(STParser.VarDeclContext,i)


        def getRuleIndex(self):
            return STParser.RULE_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructure" ):
                listener.enterStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructure" ):
                listener.exitStructure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructure" ):
                return visitor.visitStructure(self)
            else:
                return visitor.visitChildren(self)




    def structure(self):

        localctx = STParser.StructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_structure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            localctx.name = self.match(STParser.ID)
            self.state = 155
            self.match(STParser.T__6)
            self.state = 156
            self.match(STParser.STRUCT)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==STParser.ID:
                self.state = 157
                self.varDecl()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 163
            self.match(STParser.END_STRUCT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_privContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(STParser.VAR, 0)

        def END_VAR(self):
            return self.getToken(STParser.END_VAR, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(STParser.VarDeclContext,i)


        def getRuleIndex(self):
            return STParser.RULE_var_priv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_priv" ):
                listener.enterVar_priv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_priv" ):
                listener.exitVar_priv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_priv" ):
                return visitor.visitVar_priv(self)
            else:
                return visitor.visitChildren(self)




    def var_priv(self):

        localctx = STParser.Var_privContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_priv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(STParser.VAR)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==STParser.ID:
                self.state = 166
                self.varDecl()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(STParser.END_VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_inContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_INPUT(self):
            return self.getToken(STParser.VAR_INPUT, 0)

        def END_VAR(self):
            return self.getToken(STParser.END_VAR, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(STParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(STParser.VarDeclContext,i)


        def getRuleIndex(self):
            return STParser.RULE_var_in

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_in" ):
                listener.enterVar_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_in" ):
                listener.exitVar_in(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_in" ):
                return visitor.visitVar_in(self)
            else:
                return visitor.visitChildren(self)




    def var_in(self):
